--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -32,11 +32,41 @@
                     <!-- Action buttons-->
                     <div class="action-buttons"></div>
                     <div class="subheader">
+                    
+                          
+                    
                         <div class="tags-container">
-                            <button class="btn-filter ng-animate-disabled">
-                                <span>Add tag</span>
-                                <span style="font-size: 20px;">+</span>
-                            </button>
+                            
+                            <div style="display: flex; justify-content: space-between;">
+                                
+                                {% for tag in issue.tags %}
+                                    <div style="background-color: {{tag.color}}; display: flex; justify-content: space-between;">
+                                        <span  style="margin-top: 1px; margin-right: 2px; margin-left: 5px;">{{tag.name}}</span>
+                                    <i class="fa fa-times" aria-hidden="true" href="esborrar tag - issue"></i>
+                                    </div>>
+                                {% endfor %}
+                                
+                                <!--   
+                                <div style="background-color: red; display: flex; justify-content: space-between;">
+                                    <span  style="margin-top: 1px; margin-right: 2px; margin-left: 5px;">aaaa</span>
+                                    <i class="fa fa-times" aria-hidden="true"></i>
+                                </div>
+                                --> 
+                                <button class="btn-filter ng-animate-disabled" id="addTagBtn">
+                                    <span>Add tag</span>
+                                    <span style="font-size: 20px;">+</span>
+                                </button> 
+
+                                <div id="addTag" style="display: none;">
+                                    <input name="nom" type="text" placeholder="Enter tag" >
+                                    <input name="color" type="color" style="margin-top: auto; margin-bottom: auto; margin-left: 5px;">
+                                    <button type="submit" name="afegir_tag" style="background: none;">
+                                        <i class="fa fa-floppy-o" aria-hidden="true"></i>
+                                    </button>
+                                </div>
+                                
+                            </div>
+                            
                         </div>
                         <div>
                             <div class="created-by">
@@ -245,17 +275,21 @@
 </div>
 </form>
 
-<!--
-    <form method="post" >
-        {% csrf_token %}
-        <input type="text" name="subject" value="{{ form.subject.value }}">
-        <input type="text" name="tipus" value="{{ form.tipus.value }}">
-        <input type="text" name="estat" value="{{ form.estat.value }}">
-        <input type="text" name="gravetat" value="{{ form.gravetat.value }}">
-        <input type="text" name="prioritat" value="{{ form.prioritat.value }}">
-        <input type="text" name="gravetat" value="{{ form.gravetat.value }}">
-        <input type="submit" name="save_subject" class="btn-big add-item" style="margin-top: 10px; margin-bottom: 10px;">
-    </form>
--->
+<script>
+    var myButton = document.getElementById('addTagBtn');
+    var myDiv = document.getElementById('addTag');
+
+    myButton.addEventListener('click', function() {
+        event.preventDefault();
+        if (myDiv.style.display === 'none') {
+            myDiv.style.display = 'flex';
+            myDiv.style.justifyContent = 'space-between';
+            myButton.style.display = 'none';
+        } else {
+            myDiv.style.display = 'none';
+        }
+    });
+</script>
+
 {% endblock %}
 
