task #96 afegir tags backend

--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -39,7 +39,7 @@
                             
                             <div style="display: flex; justify-content: space-between;">
                                 
-                                {% for tag in issue.tags %}
+                                {% for tag in issue.tags.all %}
                                     <div style="background-color: {{tag.color}}; display: flex; justify-content: space-between;">
                                         <span  style="margin-top: 1px; margin-right: 2px; margin-left: 5px;">{{tag.name}}</span>
                                     <i class="fa fa-times" aria-hidden="true" href="esborrar tag - issue"></i>
