task #105 preparar navbar

--- a/issues/templates/issue_edit.html
+++ b/issues/templates/issue_edit.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'navbar.html' %}
+{% block body %}
 
 <form method="post" enctype="multipart/form-data">
 {% csrf_token %}
