--- a/issues/templates/issue_list.html
+++ b/issues/templates/issue_list.html
@@ -1,7 +1,7 @@
 
-{% extends 'base.html' %}
+{% extends 'navbar.html' %}
 
-{% block content %}
+{% block body %}
 
 <div class="master" style>
     <div class = "wrapper issues lightbox-generic-form">
