--- a/usuaris/templates/usuaris_perfil.html
+++ b/usuaris/templates/usuaris_perfil.html
@@ -1,7 +1,7 @@
 
-{% extends 'base.html' %}
+{% extends 'navbar.html' %}
 
-{% block content %}
+{% block body %}
 
 <body class="vsc-initialized">
     <nav class ="navbar" style>
